--- a/components/command/command-handler/pom.xml
+++ b/components/command/command-handler/pom.xml
@@ -13,7 +13,6 @@
 
     <dependencies>
 
-
         <dependency>
             <groupId>uk.gov.justice.services</groupId>
             <artifactId>core</artifactId>
@@ -82,11 +81,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>uk.gov.justice.services</groupId>
-            <artifactId>event-repository-liquibase</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.squareup</groupId>
+            <artifactId>javapoet</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -95,6 +94,18 @@
         <dependency>
             <groupId>org.apache.tomee</groupId>
             <artifactId>openejb-server</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.justice.services</groupId>
+            <artifactId>generators-test-utils</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>uk.gov.justice.services</groupId>
+            <artifactId>event-repository-liquibase</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
